--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,4 @@
 .App.App {
-  background-color: #282c34;
-  min-height: 100vh;
-}
-
-h1{
-  margin:0;
-  color: white;
-  font-size: 60px;
-  text-align: center;
-}
-
-.homeContainer {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -18,42 +6,51 @@ h1{
   justify-content: center;
   font-size: 20px;
   color: white;
-  gap: 40px;
-}
-
-.modulesContainer{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 40px;
 }
 
 .wallet-client {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   text-align: center;
-  margin: 50px 0;
-  background-color: black;
-  padding: 50px;
-  border-radius: 60px;
-  width: 300px;
-  height: 200px;
+    margin: 50px 0;
+    background-color: #1a2b25;
+    padding: 50px;
+    border-radius: 20px;
+    width: 400px;
+    height: 500px;
+    color: #ffffff;
+    font-family: montserrat;
+    border: 1px solid #55B140;
+    box-shadow: 0 0 20px #55b140, 0 0 10px #55b140 inset;
+    animation: neon 1s ease infinite;
+    -moz-animation: neon 1s ease infinite;
+    -webkit-animation: neon 1s ease infinite;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+@keyframes neon {
+  0%,
+  100% {
+    box-shadow: 0 0 0vw #55b1408a, 0 0 0vw #55b1408a, 0 0 1vw 0px #55b1408a, 0 0 6vw 0px #55b1408a, 0 0 0.4vw #ffffff, 0vw 0vw 0.1vw #ffffff;
+  }
+  50% {
+    box-shadow: 0 0 0.5vw #1d3f15, 0 0 1.5vw #1d3f15, 0 0 5vw #1d3f15, 0 0 5vw #1d3f15, 0 0 0.2vw #1d3f15, 0.5vw 0.5vw 0.1vw #1d3f15;  }
 }
 
 .App button {
-  background-color: rgb(24, 24, 24);
-  border-radius: 60px;
-  border: 0;
-  color: white;
-  padding: 20px 40px;
+  background-color: #55B140;
+  font-family: montserrat;
+  font-weight: 500;
+  font-size: 17px;
+  border-radius: 15px;
+  border:0;
+  color:white;
+  padding: 10px 30px;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 .App button:hover {
-  background-color: gray;
+  background-color:#136600;
   cursor: pointer;
+  
 }
-.App button:disabled {
-  background-color: red;
-  cursor:crosshair;
-}
+
