--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@font-face {
+  font-family: 'PirataOne';
+  src: url('./fonts/PirataOne.ttf') format('truetype');
+}
+
